# insight-blueprint

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/docs/: DESIGN.md
.claude/docs/research/: SPEC-4b-frontend-research.md  SPEC-5-codex-design-review.md  insight-blueprint-mcp.md  review-design-SPEC-4a.md  review-quality-SPEC-4a.md  review-quality-SPEC-4b.md  review-quality-inline-review-comments.md  review-quality-review-workflow.md  review-quality-skills-distribution.md  review-quality-spec-1-2-3.md  review-requirements-SPEC-4a.md  review-requirements-SPEC-4b.md  review-requirements-inline-review-comments.md  review-requirements-review-workflow.md  review-requirements-spec-1-2-3.md  review-security-SPEC-4a.md  review-security-SPEC-4b.md  review-security-inline-review-comments.md  review-security-review-workflow.md  review-security-skills-distribution.md  review-security-spec-1-2-3.md  review-tasks-inline-review-comments.md  review-test-design-SPEC-4a.md  review-tests-SPEC-4a.md  review-tests-SPEC-4b.md  review-tests-inline-review-comments.md  review-tests-review-workflow.md  review-tests-skills-distribution.md  review-tests-spec-1-2-3.md  review-workflow-research.md  spec2-catalog-patterns.md  spec2-fts5-tokenizer.md  spec2-schema-discovery.md  task1-mcp-sdk.md  task2-frontend-bundling.md  task3-reference-projects.md  task4-storage-patterns.md  task5-claude-integration.md  webui-backend-research.md
.claude/hooks/: agent-router.py  check-codex-after-plan.py  check-codex-before-write.py  error-to-codex.py  log-cli-tools.py  post-implementation-review.py  post-test-analysis.py  spec-task-complete.py  suggest-gemini-research.py
.claude/rules/: skill-format.md  spec-workflow-rules.md
.claude/skills/checkpointing/: checkpoint.py
.claude/skills/migrate-to-spec/: SKILL.md
.claude/skills/spec-start/: SKILL.md
.claude/skills/team-implement/: SKILL.md
.claude/skills/team-review/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  publish.yml
.insight/: config.example.yaml
.insight/rules/: methodology_vocab.yaml  package_allowlist.yaml
.spec-workflow/: .gitignore
.spec-workflow/specs/SPEC-1/: design.md  requirements.md  tasks.md
.spec-workflow/specs/SPEC-1a/: design.md  requirements.md  tasks.md
.spec-workflow/specs/SPEC-2/: design.md  requirements.md  tasks.md
.spec-workflow/specs/SPEC-3/: design.md  requirements.md  tasks.md  test-design.md
.spec-workflow/specs/SPEC-4a/: design.md  requirements.md  tasks.md  test-design.md
.spec-workflow/specs/SPEC-4b/: design.md  requirements.md  tasks.md  test-design.md
.spec-workflow/specs/analysis-revision/: design.md  requirements.md  tasks.md  test-design.md
.spec-workflow/specs/batch-analysis/: design.md  investigation.md  requirements.md  tasks.md  test-design.md
.spec-workflow/specs/batch-harness-engineering/: design.md  requirements.md  tasks.md  test-design.md
.spec-workflow/specs/design-status-refactor/: design.md  requirements.md  tasks.md  test-design.md
.spec-workflow/specs/inline-review-comments/: design.md  requirements.md  tasks.md  test-design.md
.spec-workflow/specs/knowledge-suggestion/: design.md  requirements.md  tasks.md  test-design.md
.spec-workflow/specs/plugin-distribution/: design.md  requirements.md  tasks.md  test-design.md
.spec-workflow/specs/pypi-publish-readiness/: design.md  requirements.md  tasks.md  (+1 more)
.spec-workflow/steering/: product.md  structure.md  tech.md
docs/: RELEASE.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: catalog.spec.ts  cross-tab.spec.ts  design-detail.spec.ts  history.spec.ts  rules.spec.ts  smoke.spec.ts
frontend/src/: App.tsx  main.tsx
scripts/: check_tag_version.py  verify_wheel.py
skills/_shared/: __init__.py  _atomic.py  config_loader.py  crash_recovery.py  manifest_writer.py  models.py  token_manager.py
skills/analysis-design/: SKILL.md
skills/analysis-framing/: SKILL.md
skills/analysis-journal/: SKILL.md
skills/analysis-revision/: SKILL.md
skills/batch-analysis/: SKILL.md  batch-prompt.md  launcher.sh
skills/catalog-register/: SKILL.md
skills/data-lineage/: SKILL.md
skills/premortem/: SKILL.md  __init__.py  cli.py
src/: __init__.py
src/insight_blueprint/: __init__.py  __main__.py  _registry.py  cli.py  server.py  web.py
tests/: conftest.py  skill_helpers.py  test_catalog.py  test_catalog_models.py  test_check_tag_version.py  test_claude_md_and_rules.py  test_cli.py  test_design_backward_compat.py  test_design_models.py  test_designs.py  test_integration.py  test_packaging.py  test_placeholder.py  test_plugin_structure.py  test_registry.py  test_review_models.py  test_reviews.py  test_rules.py  test_server.py  test_skill_integration.py  test_skill_update.py  test_sqlite_store.py  test_storage.py  test_tutorial_data.py  test_verify_wheel.py  test_version.py  test_web.py  test_web_cli.py  test_web_integration.py
tests/batch_harness/: test_allowlist_loader.py  test_atomic.py  test_crash_recovery.py  test_history_query.py  test_manifest_writer.py  test_premortem_config.py  test_risk_evaluator.py  test_token_manager.py
tests/e2e/: __init__.py  stub_claude.py
tests/integration/: __init__.py  conftest.py  test_batch_launcher.py  test_crash_recovery.py  test_manifest_atomic.py  test_methodology_tag_retry.py  test_mode_risk_matrix.py  test_premortem_cli.py  test_premortem_io_contract.py  test_premortem_modes.py  test_premortem_performance.py  test_session_id_extraction.py  test_token_security.py
tests/lineage/: test_exporter.py  test_tracker.py
tests/skills/: test_skill_structure.py
tutorial/: README.md
tutorial/notebooks/: 01_explore.py  02_verify.py
tutorial/sample_data/: sales.csv
tutorial/scripts/: generate_data.py
(+159 files in other folders)
