[project]
name = "my-project"
version = "0.1.0"
description = "LLM/Agent development project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "ty>=0.0.1",
    "pytest>=8.0",
    "poethepoet>=0.31",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ============================================================
# ruff
# ============================================================
[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [".claude/"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"

# ============================================================
# pytest
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

# ============================================================
# poethepoet
# ============================================================
[tool.poe.tasks.lint]
shell = "uv run ruff check . && uv run ruff format --check ."

[tool.poe.tasks.format]
shell = "uv run ruff check --fix . && uv run ruff format ."

[tool.poe.tasks.typecheck]
cmd = "uv run ty check ."

[tool.poe.tasks.test]
cmd = "uv run pytest -v"

[tool.poe.tasks.all]
sequence = ["lint", "typecheck", "test"]
